src/test/ui/lifetime-errors/ex3-both-anon-regions.stderr
error[E0623]: lifetime mismatch
  --> $DIR/ex3-both-anon-regions.rs:12:12
   |
11 | fn foo(x: &mut Vec<&u8>, y: &u8) {
   |                    ---      --- these two types are declared with different lifetimes...
12 |     x.push(y); //~ ERROR lifetime mismatch
   |            ^ ...but data from `y` flows into `x` here

error: aborting due to previous error

